--- a/static/canteen/about.css
+++ b/static/canteen/about.css
@@ -29,27 +29,6 @@ body {
     width: 85%;
 }
 
-.search-bar input {
-    width: 400px;
-    padding: 10px;
-    border-radius: 10px;
-    padding: 16px 0px 16px 70px;
-    background-color: #fff;
-    border: none;
-    position: relative;
-}
-
-.search-icon img {
-    width: 65%;
-    position: static;
-}
-
-.search-icon {
-    position: absolute;
-    top: 4.5%;
-    left: 37%;
-}
-
 .profile {
     display: flex;
     align-items: center;
@@ -73,8 +52,34 @@ body {
     display: flex;
 }
 
+.search-bar {
+    position: relative;
+}
+
+.search-bar input {
+    font-family: 'Habibi', sans-serif;
+    width: 400px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #fff;
+    border: none;
+}
+
+.search-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button i {
+    position: absolute;
+    top: 15px;
+    right: 20px;
+}
+
 .slide {
-    width: 50%;
+    width: 70%;
     height: 500px;
     background: #fff;
     border: 2px solid #d9d9d9;
