--- a/static/canteen/non-veg.css
+++ b/static/canteen/non-veg.css
@@ -11,7 +11,7 @@ body {
 }
 
 .main-container {
-    padding: 0 0 10px 0;
+    padding: 0 0 10px;
     background-color: #fff;
     border-radius: 50px 50px 0 0;
 }
@@ -48,7 +48,7 @@ body {
     font-size: 16px;
 }
 
-button i {
+.search-btn i {
     position: absolute;
     top: 15px;
     right: 20px;
@@ -92,12 +92,16 @@ h1 {
     font-family: 'Habibi', sans-serif;
     font-size: 18px;
     text-align: center;
-    padding: 20px 0 0 0;
+    padding: 20px 0 0;
     pointer-events: none;
 }
 
-ul li {
+ul {
     list-style: none;
+}
+
+ul li {
+    margin: 0;
 }
 
 ul li a {
@@ -110,7 +114,6 @@ ul li a {
 }
 
 ul li:hover a {
-    text-decoration: none;
     color: #fff;
     background: #F2780D;
 }
@@ -120,76 +123,85 @@ ul li a i {
     width: 40px;
 }
 
-.menu-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 30px;
-    margin-left: 65px;
-    gap:30px;
-
-}
-
-.menu-item {
-    position: relative;
-    width: auto;
-    overflow: hidden;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.menu-item img {
+.container {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.5s ease;
 }
 
-.menu-item:hover img {
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
-.menu-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.menu-text a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 16px;
-    font-weight: 500;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    cursor: pointer;
-}
-
-.menu-text a:hover {
-    color: #F2780D;
-}
-
-.button {
+.title {
     display: flex;
-    justify-content: flex-end;
-    margin-bottom: 5px;
+    align-items: center;
+    margin: 10px 0;
 }
 
-.btn {
-    background: #F2780D;
-    padding: 5px 20px;
-    margin-right: 40px;
-    margin-top: 25px;
+h2 {
+    font-size: 24px;
 }
 
-.btn a {
-    text-decoration: none;
+.menu-table {
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    border-collapse: collapse;
+    margin-bottom: 10px;
+}
+
+.menu-table th, .menu-table td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.menu-table img {
+    width: 40%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.menu-table th {
+    background-color: #f4eeee;
+    font-weight: 500;
+}
+
+td i {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    margin-right: 8px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+}
+
+.back-btn, .save-btn {
+    border: none;
+    padding: 8px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
     color: #fff;
 }
 
-.btn a:hover {
-    color: #d8c3c3;
+.back-btn {
+    background-color: #fff;
+    border: 1px solid #ED8B35;
+    color: #ED8B35;
+}
+
+.save-btn {
+    background-color: #ED8B35;
+}
+
+.back-btn:hover, .save-btn:hover {
+    background-color: #ff6347;
+}
+
+.back-btn a, .save-btn a {
+    text-decoration: none;
+    color: inherit;
 }
 
 .footer {
