--- a/static/form.css
+++ b/static/form.css
@@ -1,121 +1,19 @@
-b,
-strong {
-    font-weight: bolder;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-    font-family: inherit;
-    font-size: 100%;
-    line-height: 1.15;
-    margin: 0;
-}
-
-button,
-input {
-    overflow: visible;
-}
-
-button,
-select {
-    text-transform: none;
-}
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-    -webkit-appearance: button;
-}
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
-}
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-    outline: 1px dotted Button;
-}
-
-textarea {
-    overflow: auto;
-}
-
-[type="checkbox"],
-[type="radio"] {
-    box-sizing: border-box;
-    padding: 0;
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-    height: auto;
-}
-
-[type="search"] {
-    -webkit-appearance: textfield;
-    outline-offset: -2px;
-}
-
-input[type=search]::-ms-clear {
-    display: none;
-    width: 0;
-    height: 0;
-}
-
-input[type=search]::-ms-reveal {
-    display: none;
-    width: 0;
-    height: 0;
-}
-
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-    display: none;
-}
-
-[type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    font: inherit;
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Habibi, sans-serif;
+    font-family: 'Habibi', sans-serif;
     font-weight: 400;
 }
 
 body {
     background-color: #F2780D;
-    border-radius: 40px 40px 0px 0px;
+    border-radius: 40px;
 }
 
 .main-container {
-    padding: 0px;
     background-color: #fff;
-    border-radius: 40px 40px 0px 0px;
-}
-
-.site-main {
-    display: flex;
-    justify-content: space-between;
+    border-radius: 50px;
 }
 
 .header {
@@ -127,7 +25,27 @@ body {
 }
 
 .logo img {
-    width: 80%;
+    width: 85%;
+}
+
+.search-bar input {
+    width: 400px;
+    padding: 10px;
+    border-radius: 10px;
+    padding: 16px 0px 16px 70px;
+    background-color: #fff;
+    border: none;
+}
+
+.search-icon img {
+    width: 65%;
+    position: static;
+}
+
+.search-icon {
+    position: absolute;
+    top: 4.5%;
+    left: 37%;
 }
 
 .profile {
@@ -141,6 +59,7 @@ body {
 .profile img {
     width: 40px;
     margin-right: 10px;
+    border-radius: 50%;
 }
 
 .profile a {
@@ -148,43 +67,46 @@ body {
     color: #fff;
 }
 
-.sidebar {
-    width: 14%;
+.site-main {
+    display: flex;
+}
+
+.slide {
+    width: 13%;
     height: 500px;
-    background-color: #fff;
-    border:2px solid #BFC0C0 ;
-    border-radius: 40px 0px 0px;
-    padding: 35px 0px 35px 35px;
+    background: #fff;
+    border: 2px solid #d9d9d9;
+    border-radius: 40px 0 0 0;
 }
 
-.sidebar h1 {
+h1 {
     color: #F2780D;
-    font-size: 20px;
-    font-weight: 400px;
+    font-size: 18px;
+    text-align: center;
+    padding: 20px;
+    margin: 5px 0px;
 }
 
-.menu ul {
+ul li {
     list-style: none;
 }
 
-.menu ul li {
-    margin: 30px 0;
-}
-
-.menu ul li a {
+ul li a {
     color: #000;
+    padding: 20px 5px;
     text-decoration: none;
     font-size: 16px;
+    display: block;
 }
 
-.menu ul li:hover {
-    cursor: pointer;
-    background-color: #F2780D;
-    padding-left: 20px;
+ul li:hover a {
+    color: #fff;
+    background: #F2780D;
 }
 
-.icon {
-    margin-right: 15px;
+ul li a i {
+    text-align: center;
+    width: 40px;
 }
 
 .social-icons a {
@@ -204,17 +126,18 @@ body {
 }
 
 .content {
+    max-width: 1200px;
+    width: 100%;
     flex-grow: 1;
-    margin-left: 20px;
 }
 
 .form-container {
-    width: 98%;
+    width: 100%;
     background-color: #fff;
     border: 1px solid #F2780D;
     border-radius: 40px;
     padding: 40px 80px;
-    margin: 10px 0px 40px 0px;
+    margin: 30px 10px 20px 30px;
 }
 
 form h2 {
@@ -267,15 +190,25 @@ button {
 
 button a {
     text-decoration: none;
-    color: #fff;
+    color: white;
 }
 
 button:hover {
-    background-color: #ED8B35; 
+    background-color: #d96010;
 }
 
 .footer {
-    color: #fff;
     text-align: center;
-    padding: 10px;
+    color: #fff;
+    margin: 0 auto;
+}
+
+.social-icons a {
+    display: inline-block;
+}
+
+.social-icons img {
+    width: 100%;
+    height: 24px;
+    margin: 5px;
 }
