--- a/static/menu.css
+++ b/static/menu.css
@@ -174,7 +174,7 @@ body {
 }
 
 .slide {
-    width: 13%;
+    width: 20%;
     height: 500px;
     background: #fff;
     border: 2px solid #d9d9d9;
@@ -306,7 +306,7 @@ ul li a i {
 h2 {
     display: flex;
     justify-content: center;
-    margin-bottom: 30px;
+    margin: 30px 0;
     font-weight: 500;
     padding: 10px;
     cursor: pointer;
@@ -314,17 +314,17 @@ h2 {
 
 .veg .row{
     display: flex;
-    justify-content: space-around;
-    margin: 20px;
+    gap: 30px;
     cursor: pointer;
     flex-wrap: wrap;
+    margin-right: 55px;
 }
 .non-veg .row{
     display: flex;
-    justify-content: space-around;
-    margin: 20px;
+    gap: 30px;
     cursor: pointer;
     flex-wrap: wrap;
+    margin-right: 55px;
 }
 
 .veg .veg-options,
@@ -359,69 +359,55 @@ h2 {
     background: #fff;
     border: 1px solid #F2780D;
     border-radius: 20px;
-    margin: 20px auto;
-    padding: 10px;
-    width: 90%; /* Center and provide width */
+    width: 91%; 
+}
+
+.drink-topic {
+    display: flex;
+    justify-content: space-around;
 }
 
 .drinks-category {
-    padding: 20px;
+    padding: 10px;
     border-radius: 20px;
+}
+
+.drinks-row {
+    width: 100%;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
 .drink {
     display: flex;
-    justify-content: space-between;
-    align-items: center; /* Center items vertically */
-    margin-bottom: 20px;
+    flex-direction: row;
 }
 
-.drinks-category .row {
-    width: 100%;
+.drink-grid {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
-h3 {
-    text-align: center;
-}
-
-.col {
+.drink-item {
+    width: 500px;
     display: flex;
-    align-items: center;
-    width: 48%; /* Make sure two items fit in a row */
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #D6D5D5;
-    border-radius: 10px;
+    gap: 10%;
 }
 
-.col img {
-    width: 80px; /* Ensure a consistent image size */
-    height: auto;
-    border-radius: 10px;
-    margin-right: 10px;
-}
-
-h4 {
-    margin: 30px 0 0 0;
-    font-size: 18px;
-}
-
-.drink-info {
+.drink-content {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
+    gap: 15px;
+    margin-top: 20px
 }
 
-.drink-info p {
-    margin: 0;
-    padding: 5px 0;
+.drink-content p {
+    margin-top: 10px;
+    padding-top: 15px;
     color: #F2780D;
 }
 
-.col .button {
+.drink-content form {
     display: flex;
     align-items: end;
 }
