--- a/static/order.css
+++ b/static/order.css
@@ -210,6 +210,22 @@ h2 {
     height: 24px;
     margin: 5px;
 }
+
+.place-order-btn {
+    background: rgb(3, 187, 3);
+    color: #fff;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.place-order-btn:hover {
+    background: rgb(131, 248, 131);
+    color: #fff;
+}
+
 .delete-order-btn {
     background-color: #dc3545;  /* Red color for delete */
     color: white;
