--- a/templates/student/order.html
+++ b/templates/student/order.html
@@ -13,10 +13,18 @@
 <div class="container">
     <h2>Order Bill</h2>
     <p class="order-number">Order #{{order.order_number}}</p>
-    <form action="{% url 'delete_order' order.id %}" method="post" style="display:inline;">
-        {% csrf_token %}
-        <button type="submit" class="delete-order-btn">Delete Order</button>
-    </form>
+    
+    {% if order.id %}
+        <form action="{% url 'place_order' order.id %}" method="post" style="display:inline;">
+            {% csrf_token %}
+            <button type="submit" class="place-order-btn">Confirm Order</button>
+        </form>
+        
+        <form action="{% url 'delete_order' order.id %}" method="post" style="display:inline;">
+            {% csrf_token %}
+            <button type="submit" class="delete-order-btn">Delete Order</button>
+        </form>
+    {% endif %}
 
     {% for order_item in order_items %}
     <div class="item">
@@ -41,36 +49,9 @@
 
     <div class="total">
         <p>Total:</p>
-        <p>Rs.<span id="total-price">{{order.get_total_price}}</span></p>
+        <p><span id="total-price">{{order.get_total_price}}</span></p>
     </div>
-    <form action="{% url 'confirm_order' order.id %}" method="post">
-        {% csrf_token %}
-        <button type="submit" class="confirm-order-btn" 
-                {% if order.status == 'confirmed' %}
-                    style="background-color: rgb(51, 128, 0) ;"
-                {% else %}
-                    style="background-color: orange;"
-                {% endif %}>
-            {% if order.status == 'confirmed' %}
-                Confirmed
-            {% else %}
-                Confirm Order
-            {% endif %}
-        </button>
-    </form>
 </div>
-{% if messages %}
-    <div class="popup-message">
-        {% for message in messages %}
-            <p>{{ message }}</p>
-        {% endfor %}
-    </div>
-    <script>
-        setTimeout(function() {
-            document.querySelector('.popup-message').style.display = 'none';
-        }, 3000);  // Hide after 3 seconds
-    </script>
-{% endif %}
 <script src="{% static 'js/order.js' %}"></script>
 
 {% endblock content %}
