--- a/templates/canteen/settings.html
+++ b/templates/canteen/settings.html
@@ -6,40 +6,39 @@
 {% endblock link %}
 
 {% block content %}
-<main>
-    <div class="main-container">
-        <div class="site-main">
-            <div class="content">
-                <div class="logout-btn"><a href="{% url 'canteen_login' %}" class="logout">LogOut<i class="fas fa-sign-out-alt"></i></a></div>
-                <div class="edit-container">
-                    <h2>Edit Profile <span class="edit-icon"><i class="fas fa-pen"></i></span></h2>
-                    <div class="profile-photo">
-                        <img src="../images/profile.png" alt="Profile Photo">
-                        <div class="photo-buttons">
-                            <button class="add-photo">Add Photo</button>
-                            <button class="remove-photo">Remove Photo</button>
-                        </div>
-                    </div>
-                    <form class="profile-form">
-                        <div class="input-group">
-                            <input type="text" placeholder="Nimesh" required>
-                            <input type="text" placeholder="Basnet" required>
-                        </div>
-                        <div class="input-group">
-                            <input type="email" placeholder="bnimesh99@gmail.com" required>
-                            <input type="tel" placeholder="+977-9808000000" required>
-                        </div>
-                        <div class="input-group">
-                            <input type="text" placeholder="Kathmandu" required>
-                            <input type="text" placeholder="Nepal" required>
-                        </div>
-                        <div class="form-buttons">
-                            <button type="button" class="discard-button">DISCARD</button>
-                            <button type="submit" class="save-button">SAVE</button>
-                        </div>
-                    </form>
-                </div>
+<section class="content">
+    <div class="logout-btn">
+        <a href="{% url 'login' %}" class="logout">LogOut</a>
+        <img src="{% static 'images/logout.svg' %}" alt="logout">
+    </div>
+    <div class="edit-container">
+        <h2>Edit Profile <span class="edit-icon"><img src="{% static 'images/edit.svg' %}"alt="edit"></span></h2>
+        <div class="profile-photo">
+            <img src="{% static 'images/profile2.png' %}" alt="Profile Photo">
+            <div class="photo-buttons">
+                <button class="add-photo">Add Photo</button>
+                <button class="remove-photo">Remove Photo</button>
             </div>
         </div>
-</main>
+        <form class="profile-form" method="POST">
+            {% csrf_token %}
+            <div class="input-group">
+                <input type="text" placeholder="Nimesh" required>
+                <input type="text" placeholder="Basnet" required>
+            </div>
+            <div class="input-group">
+                <input type="email" placeholder="nemesh99@gmail.com" required>
+                <input type="tel" placeholder="980034342" required>
+            </div>
+            <div class="input-group">
+                <input type="text" placeholder="Maitidevi" required>
+                <input type="text" placeholder="Nepal" required>
+            </div>
+            <div class="form-buttons">
+                <button type="button" class="discard-button">DISCARD</button>
+                <button type="submit" class="save-button">SAVE</button>
+            </div>
+        </form>
+    </div>
+</section>
 {% endblock content %}
